Fixed the UI on IE7 : Kanchan

--- a/media/css/plugins/960gd/ie7.css
+++ b/media/css/plugins/960gd/ie7.css
@@ -35,12 +35,3 @@
 #que_code li{
      clear: both;
     }
-
-#question_form .alpha_list li{
-    margin-left: 13px;
-}
-
-#question_form #questions-panel .question_list li {
-    margin-bottom: 10px;
-    margin-left: 23px;
-}
